# dead-internet-detective

./: BLOG.md  Dockerfile  HF_BLOG_DRAFT.md  LOCAL_TRAINING_SETUP.md  README.md  README_HF.md  TASKS_PERSON_C.md  TRAINING_GUIDE.md  _check.py  _check_p3.py  _dump_log.py  _phase2_setup.py  _phase3_setup.py  evaluate.py  held_out_raw.json  held_out_raw_p3.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_training_local.sh  run_training_windows.bat  validate_difficulties.py
.claude/: settings.local.json
.github/workflows/: sync_hf.yml
dead_internet_detective/: environment.py  models.py
dead_internet_detective/graders/: __init__.py  consistency.py  detection.py  efficiency.py  evidence.py  verdict.py
dead_internet_detective/server/: app.py
dead_internet_detective/tools/: __init__.py  reasoning.py
eval_space/: Dockerfile  app.py
eval_space/client/: client.py
ingestion/: factcheck_rss.py
notebooks/: training_grpo.ipynb
plots/: generate_plots.py
talent-scout/: README.md  sample_output.json
talent-scout/backend/: .env.example  conversation_simulator.py  jd_parser.py  llm_client.py  main.py  matching_engine.py  models.py  ranking.py  requirements.txt
talent-scout/frontend/: package.json  tailwind.config.js
talent-scout/frontend/app/: globals.css  (+3 more)
tests/: test_e2e.py  test_environment.py  test_generator.py  test_graders.py  test_tools.py
training_space/: train.py
training_space_phase2/: app.py  requirements_training.txt  train.py
training_space_phase2/client/: client.py
training_space_phase3/: Dockerfile  app.py  train.py
(+13 files in other folders)
