[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dead-internet-detective"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn",
    "pytest",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
